PL_Project_grupo39/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Header SEMICOLON Block DOT
Rule 2     Header -> PROGRAM IDENTIFIER
Rule 3     Block -> Var_declaration_block Code_block
Rule 4     Var_declaration_block -> VAR Var_list
Rule 5     Var_declaration_block -> <empty>
Rule 6     Var_list -> Var_declaration Var_list
Rule 7     Var_list -> Var_declaration
Rule 8     Var_declaration -> Identifier_list COLON Type SEMICOLON
Rule 9     Identifier_list -> IDENTIFIER COMMA Identifier_list
Rule 10    Identifier_list -> IDENTIFIER
Rule 11    Type -> TINTEGER
Rule 12    Type -> TREAL
Rule 13    Type -> TSTRING
Rule 14    Type -> TCHAR
Rule 15    Type -> TBOOLEAN
Rule 16    Type -> Array_type
Rule 17    Array_type -> ARRAY LBRACKET integer DOTDOT integer RBRACKET OF Type
Rule 18    Code_block -> BEGIN Statements END
Rule 19    Statements -> Statement SEMICOLON Statements
Rule 20    Statements -> Statement
Rule 21    Statement -> Assignment_statement
Rule 22    Statement -> Code_block
Rule 23    Statement -> If_statement
Rule 24    Statement -> While_statement
Rule 25    Statement -> For_statement
Rule 26    Statement -> Write_statement
Rule 27    Statement -> Readln_statement
Rule 28    Statement -> <empty>
Rule 29    If_statement -> IF Expression THEN Statement ELSE Statement
Rule 30    If_statement -> IF Expression THEN Statement
Rule 31    While_statement -> WHILE Expression DO Statement
Rule 32    For_statement -> FOR Assignment_statement TO Expression DO Statement
Rule 33    For_statement -> FOR Assignment_statement DOWNTO Expression DO Statement
Rule 34    Write_statement -> WRITE LPAREN Param_list RPAREN
Rule 35    Write_statement -> WRITELN LPAREN Param_list RPAREN
Rule 36    Param_list -> Param_list COMMA Param
Rule 37    Param_list -> Param
Rule 38    Param -> Expression
Rule 39    Readln_statement -> READLN LPAREN IDENTIFIER RPAREN
Rule 40    Readln_statement -> READLN LPAREN IDENTIFIER LBRACKET Expression RBRACKET RPAREN
Rule 41    Assignment_statement -> IDENTIFIER ASSIGNMENT Expression
Rule 42    Assignment_statement -> IDENTIFIER LBRACKET Expression RBRACKET ASSIGNMENT Expression
Rule 43    Expression -> Expression And_or Expression_m
Rule 44    Expression -> Expression_m
Rule 45    Expression_m -> Expression_s
Rule 46    Expression_m -> Expression_m Sign Expression_s
Rule 47    Expression_s -> Element
Rule 48    Expression_s -> Expression_s Psign Element
Rule 49    And_or -> AND
Rule 50    And_or -> OR
Rule 51    Psign -> TIMES
Rule 52    Psign -> DIVISION
Rule 53    Sign -> PLUS
Rule 54    Sign -> MINUS
Rule 55    Sign -> DIV
Rule 56    Sign -> MOD
Rule 57    Sign -> EQ
Rule 58    Sign -> NEQ
Rule 59    Sign -> LT
Rule 60    Sign -> LTE
Rule 61    Sign -> GT
Rule 62    Sign -> GTE
Rule 63    Element -> IDENTIFIER
Rule 64    Element -> IDENTIFIER LBRACKET Expression RBRACKET
Rule 65    Element -> real
Rule 66    Element -> integer
Rule 67    Element -> string
Rule 68    Element -> char
Rule 69    Element -> boolean
Rule 70    Element -> LPAREN Expression RPAREN
Rule 71    Element -> NOT Element
Rule 72    real -> REAL
Rule 73    integer -> INTEGER
Rule 74    string -> STRING
Rule 75    char -> CHAR
Rule 76    boolean -> BOOLEAN

Terminals, with rules where they appear

AND                  : 49
ARRAY                : 17
ASSIGNMENT           : 41 42
BEGIN                : 18
BOOLEAN              : 76
CHAR                 : 75
COLON                : 8
COMMA                : 9 36
COMMENT              : 
DIV                  : 55
DIVISION             : 52
DO                   : 31 32 33
DOT                  : 1
DOTDOT               : 17
DOWNTO               : 33
ELSE                 : 29
END                  : 18
EQ                   : 57
FOR                  : 32 33
GT                   : 61
GTE                  : 62
IDENTIFIER           : 2 9 10 39 40 41 42 63 64
IF                   : 29 30
INTEGER              : 73
LBRACKET             : 17 40 42 64
LPAREN               : 34 35 39 40 70
LT                   : 59
LTE                  : 60
MINUS                : 54
MOD                  : 56
NEQ                  : 58
NOT                  : 71
OF                   : 17
OR                   : 50
PLUS                 : 53
PROGRAM              : 2
RBRACKET             : 17 40 42 64
READLN               : 39 40
REAL                 : 72
RPAREN               : 34 35 39 40 70
SEMICOLON            : 1 8 19
STRING               : 74
TBOOLEAN             : 15
TCHAR                : 14
THEN                 : 29 30
TIMES                : 51
TINTEGER             : 11
TO                   : 32
TREAL                : 12
TSTRING              : 13
VAR                  : 4
WHILE                : 31
WRITE                : 34
WRITELN              : 35
error                : 

Nonterminals, with rules where they appear

And_or               : 43
Array_type           : 16
Assignment_statement : 21 32 33
Block                : 1
Code_block           : 3 22
Element              : 47 48 71
Expression           : 29 30 31 32 33 38 40 41 42 42 43 64 70
Expression_m         : 43 44 46
Expression_s         : 45 46 48
For_statement        : 25
Header               : 1
Identifier_list      : 8 9
If_statement         : 23
Param                : 36 37
Param_list           : 34 35 36
Program              : 0
Psign                : 48
Readln_statement     : 27
Sign                 : 46
Statement            : 19 20 29 29 30 31 32 33
Statements           : 18 19
Type                 : 8 17
Var_declaration      : 6 7
Var_declaration_block : 3
Var_list             : 4 6
While_statement      : 24
Write_statement      : 26
boolean              : 69
char                 : 68
integer              : 17 17 66
real                 : 65
string               : 67

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Header SEMICOLON Block DOT
    (2) Header -> . PROGRAM IDENTIFIER

    PROGRAM         shift and go to state 3

    Program                        shift and go to state 1
    Header                         shift and go to state 2

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Header . SEMICOLON Block DOT

    SEMICOLON       shift and go to state 4


state 3

    (2) Header -> PROGRAM . IDENTIFIER

    IDENTIFIER      shift and go to state 5


state 4

    (1) Program -> Header SEMICOLON . Block DOT
    (3) Block -> . Var_declaration_block Code_block
    (4) Var_declaration_block -> . VAR Var_list
    (5) Var_declaration_block -> .

    VAR             shift and go to state 8
    BEGIN           reduce using rule 5 (Var_declaration_block -> .)

    Block                          shift and go to state 6
    Var_declaration_block          shift and go to state 7

state 5

    (2) Header -> PROGRAM IDENTIFIER .

    SEMICOLON       reduce using rule 2 (Header -> PROGRAM IDENTIFIER .)


state 6

    (1) Program -> Header SEMICOLON Block . DOT

    DOT             shift and go to state 9


state 7

    (3) Block -> Var_declaration_block . Code_block
    (18) Code_block -> . BEGIN Statements END

    BEGIN           shift and go to state 11

    Code_block                     shift and go to state 10

state 8

    (4) Var_declaration_block -> VAR . Var_list
    (6) Var_list -> . Var_declaration Var_list
    (7) Var_list -> . Var_declaration
    (8) Var_declaration -> . Identifier_list COLON Type SEMICOLON
    (9) Identifier_list -> . IDENTIFIER COMMA Identifier_list
    (10) Identifier_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 15

    Var_list                       shift and go to state 12
    Var_declaration                shift and go to state 13
    Identifier_list                shift and go to state 14

state 9

    (1) Program -> Header SEMICOLON Block DOT .

    $end            reduce using rule 1 (Program -> Header SEMICOLON Block DOT .)


state 10

    (3) Block -> Var_declaration_block Code_block .

    DOT             reduce using rule 3 (Block -> Var_declaration_block Code_block .)


state 11

    (18) Code_block -> BEGIN . Statements END
    (19) Statements -> . Statement SEMICOLON Statements
    (20) Statements -> . Statement
    (21) Statement -> . Assignment_statement
    (22) Statement -> . Code_block
    (23) Statement -> . If_statement
    (24) Statement -> . While_statement
    (25) Statement -> . For_statement
    (26) Statement -> . Write_statement
    (27) Statement -> . Readln_statement
    (28) Statement -> .
    (41) Assignment_statement -> . IDENTIFIER ASSIGNMENT Expression
    (42) Assignment_statement -> . IDENTIFIER LBRACKET Expression RBRACKET ASSIGNMENT Expression
    (18) Code_block -> . BEGIN Statements END
    (29) If_statement -> . IF Expression THEN Statement ELSE Statement
    (30) If_statement -> . IF Expression THEN Statement
    (31) While_statement -> . WHILE Expression DO Statement
    (32) For_statement -> . FOR Assignment_statement TO Expression DO Statement
    (33) For_statement -> . FOR Assignment_statement DOWNTO Expression DO Statement
    (34) Write_statement -> . WRITE LPAREN Param_list RPAREN
    (35) Write_statement -> . WRITELN LPAREN Param_list RPAREN
    (39) Readln_statement -> . READLN LPAREN IDENTIFIER RPAREN
    (40) Readln_statement -> . READLN LPAREN IDENTIFIER LBRACKET Expression RBRACKET RPAREN

    SEMICOLON       reduce using rule 28 (Statement -> .)
    END             reduce using rule 28 (Statement -> .)
    IDENTIFIER      shift and go to state 25
    BEGIN           shift and go to state 11
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    WRITE           shift and go to state 29
    WRITELN         shift and go to state 30
    READLN          shift and go to state 31

    Statements                     shift and go to state 16
    Statement                      shift and go to state 17
    Assignment_statement           shift and go to state 18
    Code_block                     shift and go to state 19
    If_statement                   shift and go to state 20
    While_statement                shift and go to state 21
    For_statement                  shift and go to state 22
    Write_statement                shift and go to state 23
    Readln_statement               shift and go to state 24

state 12

    (4) Var_declaration_block -> VAR Var_list .

    BEGIN           reduce using rule 4 (Var_declaration_block -> VAR Var_list .)


state 13

    (6) Var_list -> Var_declaration . Var_list
    (7) Var_list -> Var_declaration .
    (6) Var_list -> . Var_declaration Var_list
    (7) Var_list -> . Var_declaration
    (8) Var_declaration -> . Identifier_list COLON Type SEMICOLON
    (9) Identifier_list -> . IDENTIFIER COMMA Identifier_list
    (10) Identifier_list -> . IDENTIFIER

    BEGIN           reduce using rule 7 (Var_list -> Var_declaration .)
    IDENTIFIER      shift and go to state 15

    Var_declaration                shift and go to state 13
    Var_list                       shift and go to state 32
    Identifier_list                shift and go to state 14

state 14

    (8) Var_declaration -> Identifier_list . COLON Type SEMICOLON

    COLON           shift and go to state 33


state 15

    (9) Identifier_list -> IDENTIFIER . COMMA Identifier_list
    (10) Identifier_list -> IDENTIFIER .

    COMMA           shift and go to state 34
    COLON           reduce using rule 10 (Identifier_list -> IDENTIFIER .)


state 16

    (18) Code_block -> BEGIN Statements . END

    END             shift and go to state 35


state 17

    (19) Statements -> Statement . SEMICOLON Statements
    (20) Statements -> Statement .

    SEMICOLON       shift and go to state 36
    END             reduce using rule 20 (Statements -> Statement .)


state 18

    (21) Statement -> Assignment_statement .

    SEMICOLON       reduce using rule 21 (Statement -> Assignment_statement .)
    END             reduce using rule 21 (Statement -> Assignment_statement .)
    ELSE            reduce using rule 21 (Statement -> Assignment_statement .)


state 19

    (22) Statement -> Code_block .

    SEMICOLON       reduce using rule 22 (Statement -> Code_block .)
    END             reduce using rule 22 (Statement -> Code_block .)
    ELSE            reduce using rule 22 (Statement -> Code_block .)


state 20

    (23) Statement -> If_statement .

    SEMICOLON       reduce using rule 23 (Statement -> If_statement .)
    END             reduce using rule 23 (Statement -> If_statement .)
    ELSE            reduce using rule 23 (Statement -> If_statement .)


state 21

    (24) Statement -> While_statement .

    SEMICOLON       reduce using rule 24 (Statement -> While_statement .)
    END             reduce using rule 24 (Statement -> While_statement .)
    ELSE            reduce using rule 24 (Statement -> While_statement .)


state 22

    (25) Statement -> For_statement .

    SEMICOLON       reduce using rule 25 (Statement -> For_statement .)
    END             reduce using rule 25 (Statement -> For_statement .)
    ELSE            reduce using rule 25 (Statement -> For_statement .)


state 23

    (26) Statement -> Write_statement .

    SEMICOLON       reduce using rule 26 (Statement -> Write_statement .)
    END             reduce using rule 26 (Statement -> Write_statement .)
    ELSE            reduce using rule 26 (Statement -> Write_statement .)


state 24

    (27) Statement -> Readln_statement .

    SEMICOLON       reduce using rule 27 (Statement -> Readln_statement .)
    END             reduce using rule 27 (Statement -> Readln_statement .)
    ELSE            reduce using rule 27 (Statement -> Readln_statement .)


state 25

    (41) Assignment_statement -> IDENTIFIER . ASSIGNMENT Expression
    (42) Assignment_statement -> IDENTIFIER . LBRACKET Expression RBRACKET ASSIGNMENT Expression

    ASSIGNMENT      shift and go to state 37
    LBRACKET        shift and go to state 38


state 26

    (29) If_statement -> IF . Expression THEN Statement ELSE Statement
    (30) If_statement -> IF . Expression THEN Statement
    (43) Expression -> . Expression And_or Expression_m
    (44) Expression -> . Expression_m
    (45) Expression_m -> . Expression_s
    (46) Expression_m -> . Expression_m Sign Expression_s
    (47) Expression_s -> . Element
    (48) Expression_s -> . Expression_s Psign Element
    (63) Element -> . IDENTIFIER
    (64) Element -> . IDENTIFIER LBRACKET Expression RBRACKET
    (65) Element -> . real
    (66) Element -> . integer
    (67) Element -> . string
    (68) Element -> . char
    (69) Element -> . boolean
    (70) Element -> . LPAREN Expression RPAREN
    (71) Element -> . NOT Element
    (72) real -> . REAL
    (73) integer -> . INTEGER
    (74) string -> . STRING
    (75) char -> . CHAR
    (76) boolean -> . BOOLEAN

    IDENTIFIER      shift and go to state 43
    LPAREN          shift and go to state 49
    NOT             shift and go to state 50
    REAL            shift and go to state 51
    INTEGER         shift and go to state 52
    STRING          shift and go to state 53
    CHAR            shift and go to state 54
    BOOLEAN         shift and go to state 55

    Expression                     shift and go to state 39
    Expression_m                   shift and go to state 40
    Expression_s                   shift and go to state 41
    Element                        shift and go to state 42
    real                           shift and go to state 44
    integer                        shift and go to state 45
    string                         shift and go to state 46
    char                           shift and go to state 47
    boolean                        shift and go to state 48

state 27

    (31) While_statement -> WHILE . Expression DO Statement
    (43) Expression -> . Expression And_or Expression_m
    (44) Expression -> . Expression_m
    (45) Expression_m -> . Expression_s
    (46) Expression_m -> . Expression_m Sign Expression_s
    (47) Expression_s -> . Element
    (48) Expression_s -> . Expression_s Psign Element
    (63) Element -> . IDENTIFIER
    (64) Element -> . IDENTIFIER LBRACKET Expression RBRACKET
    (65) Element -> . real
    (66) Element -> . integer
    (67) Element -> . string
    (68) Element -> . char
    (69) Element -> . boolean
    (70) Element -> . LPAREN Expression RPAREN
    (71) Element -> . NOT Element
    (72) real -> . REAL
    (73) integer -> . INTEGER
    (74) string -> . STRING
    (75) char -> . CHAR
    (76) boolean -> . BOOLEAN

    IDENTIFIER      shift and go to state 43
    LPAREN          shift and go to state 49
    NOT             shift and go to state 50
    REAL            shift and go to state 51
    INTEGER         shift and go to state 52
    STRING          shift and go to state 53
    CHAR            shift and go to state 54
    BOOLEAN         shift and go to state 55

    Expression                     shift and go to state 56
    Expression_m                   shift and go to state 40
    Expression_s                   shift and go to state 41
    Element                        shift and go to state 42
    real                           shift and go to state 44
    integer                        shift and go to state 45
    string                         shift and go to state 46
    char                           shift and go to state 47
    boolean                        shift and go to state 48

state 28

    (32) For_statement -> FOR . Assignment_statement TO Expression DO Statement
    (33) For_statement -> FOR . Assignment_statement DOWNTO Expression DO Statement
    (41) Assignment_statement -> . IDENTIFIER ASSIGNMENT Expression
    (42) Assignment_statement -> . IDENTIFIER LBRACKET Expression RBRACKET ASSIGNMENT Expression

    IDENTIFIER      shift and go to state 25

    Assignment_statement           shift and go to state 57

state 29

    (34) Write_statement -> WRITE . LPAREN Param_list RPAREN

    LPAREN          shift and go to state 58


state 30

    (35) Write_statement -> WRITELN . LPAREN Param_list RPAREN

    LPAREN          shift and go to state 59


state 31

    (39) Readln_statement -> READLN . LPAREN IDENTIFIER RPAREN
    (40) Readln_statement -> READLN . LPAREN IDENTIFIER LBRACKET Expression RBRACKET RPAREN

    LPAREN          shift and go to state 60


state 32

    (6) Var_list -> Var_declaration Var_list .

    BEGIN           reduce using rule 6 (Var_list -> Var_declaration Var_list .)


state 33

    (8) Var_declaration -> Identifier_list COLON . Type SEMICOLON
    (11) Type -> . TINTEGER
    (12) Type -> . TREAL
    (13) Type -> . TSTRING
    (14) Type -> . TCHAR
    (15) Type -> . TBOOLEAN
    (16) Type -> . Array_type
    (17) Array_type -> . ARRAY LBRACKET integer DOTDOT integer RBRACKET OF Type

    TINTEGER        shift and go to state 62
    TREAL           shift and go to state 63
    TSTRING         shift and go to state 64
    TCHAR           shift and go to state 65
    TBOOLEAN        shift and go to state 66
    ARRAY           shift and go to state 68

    Type                           shift and go to state 61
    Array_type                     shift and go to state 67

state 34

    (9) Identifier_list -> IDENTIFIER COMMA . Identifier_list
    (9) Identifier_list -> . IDENTIFIER COMMA Identifier_list
    (10) Identifier_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 15

    Identifier_list                shift and go to state 69

state 35

    (18) Code_block -> BEGIN Statements END .

    DOT             reduce using rule 18 (Code_block -> BEGIN Statements END .)
    SEMICOLON       reduce using rule 18 (Code_block -> BEGIN Statements END .)
    END             reduce using rule 18 (Code_block -> BEGIN Statements END .)
    ELSE            reduce using rule 18 (Code_block -> BEGIN Statements END .)


state 36

    (19) Statements -> Statement SEMICOLON . Statements
    (19) Statements -> . Statement SEMICOLON Statements
    (20) Statements -> . Statement
    (21) Statement -> . Assignment_statement
    (22) Statement -> . Code_block
    (23) Statement -> . If_statement
    (24) Statement -> . While_statement
    (25) Statement -> . For_statement
    (26) Statement -> . Write_statement
    (27) Statement -> . Readln_statement
    (28) Statement -> .
    (41) Assignment_statement -> . IDENTIFIER ASSIGNMENT Expression
    (42) Assignment_statement -> . IDENTIFIER LBRACKET Expression RBRACKET ASSIGNMENT Expression
    (18) Code_block -> . BEGIN Statements END
    (29) If_statement -> . IF Expression THEN Statement ELSE Statement
    (30) If_statement -> . IF Expression THEN Statement
    (31) While_statement -> . WHILE Expression DO Statement
    (32) For_statement -> . FOR Assignment_statement TO Expression DO Statement
    (33) For_statement -> . FOR Assignment_statement DOWNTO Expression DO Statement
    (34) Write_statement -> . WRITE LPAREN Param_list RPAREN
    (35) Write_statement -> . WRITELN LPAREN Param_list RPAREN
    (39) Readln_statement -> . READLN LPAREN IDENTIFIER RPAREN
    (40) Readln_statement -> . READLN LPAREN IDENTIFIER LBRACKET Expression RBRACKET RPAREN

    SEMICOLON       reduce using rule 28 (Statement -> .)
    END             reduce using rule 28 (Statement -> .)
    IDENTIFIER      shift and go to state 25
    BEGIN           shift and go to state 11
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    WRITE           shift and go to state 29
    WRITELN         shift and go to state 30
    READLN          shift and go to state 31

    Statement                      shift and go to state 17
    Statements                     shift and go to state 70
    Assignment_statement           shift and go to state 18
    Code_block                     shift and go to state 19
    If_statement                   shift and go to state 20
    While_statement                shift and go to state 21
    For_statement                  shift and go to state 22
    Write_statement                shift and go to state 23
    Readln_statement               shift and go to state 24

state 37

    (41) Assignment_statement -> IDENTIFIER ASSIGNMENT . Expression
    (43) Expression -> . Expression And_or Expression_m
    (44) Expression -> . Expression_m
    (45) Expression_m -> . Expression_s
    (46) Expression_m -> . Expression_m Sign Expression_s
    (47) Expression_s -> . Element
    (48) Expression_s -> . Expression_s Psign Element
    (63) Element -> . IDENTIFIER
    (64) Element -> . IDENTIFIER LBRACKET Expression RBRACKET
    (65) Element -> . real
    (66) Element -> . integer
    (67) Element -> . string
    (68) Element -> . char
    (69) Element -> . boolean
    (70) Element -> . LPAREN Expression RPAREN
    (71) Element -> . NOT Element
    (72) real -> . REAL
    (73) integer -> . INTEGER
    (74) string -> . STRING
    (75) char -> . CHAR
    (76) boolean -> . BOOLEAN

    IDENTIFIER      shift and go to state 43
    LPAREN          shift and go to state 49
    NOT             shift and go to state 50
    REAL            shift and go to state 51
    INTEGER         shift and go to state 52
    STRING          shift and go to state 53
    CHAR            shift and go to state 54
    BOOLEAN         shift and go to state 55
